[gd_scene load_steps=17 format=3 uid="uid://dti7nlt73w1pt"]

[ext_resource type="Script" uid="uid://cowhrcrjlih20" path="res://scenes/second_scene/world_2.gd" id="1_75xp1"]
[ext_resource type="Texture2D" uid="uid://dnt8xax5o751t" path="res://assets/background&art/barrier.png" id="4_7rxoq"]
[ext_resource type="PackedScene" uid="uid://coem68ixayh4v" path="res://scenes/main_player.tscn" id="4_gdvr1"]
[ext_resource type="Texture2D" uid="uid://4jkctykfwtt7" path="res://assets/background&art/wall2.png" id="5_bgpmq"]
[ext_resource type="PackedScene" uid="uid://cnypbgnpxr1w6" path="res://scenes/music/wherewasi.tscn" id="5_e8iy5"]
[ext_resource type="Script" uid="uid://dwxp688q2gnk3" path="res://scenes/second_scene/area_2d.gd" id="5_iv88o"]
[ext_resource type="Texture2D" uid="uid://644s4axc2da0" path="res://assets/background&art/neoncitybackground.png" id="5_kl62o"]
[ext_resource type="Texture2D" uid="uid://dt2vh8kml4w6x" path="res://assets/background&art/neoncityskylines.png" id="6_baomu"]
[ext_resource type="Resource" uid="uid://dx1ronbw6qj86" path="res://dialogue/TestDialogue.dialogue" id="6_cbxgm"]
[ext_resource type="Texture2D" uid="uid://dfohh1yxkq41u" path="res://characters/wanderer.png" id="7_ey4ky"]
[ext_resource type="Texture2D" uid="uid://dr5p58bjooqbx" path="res://assets/background&art/undreamer.png" id="10_g5oks"]
[ext_resource type="Script" uid="uid://c4n0aow3ri0lr" path="res://scenes/second_scene/undreamer.gd" id="11_5yrdi"]

[sub_resource type="Theme" id="Theme_dwmqt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umgay"]
size = Vector2(22.9939, 23.0207)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6eoxu"]
size = Vector2(2609, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0tv5"]
size = Vector2(9, 628)

[node name="World2" type="Node2D"]
script = ExtResource("1_75xp1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_dwmqt")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1, 0)

[node name="neoncitylayer1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(663.5, 578.5)
scale = Vector2(2.29531, 3.40608)
texture = ExtResource("5_kl62o")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(39, 0)

[node name="neoncitylayer2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(460.5, 255.5)
scale = Vector2(1.32367, 1.6336)
texture = ExtResource("6_baomu")

[node name="MainPlayer" parent="." instance=ExtResource("4_gdvr1")]
scale = Vector2(2, 2)
camera_zoom = Vector2(0.9, 0.9)

[node name="Wherewasi" parent="MainPlayer" instance=ExtResource("5_e8iy5")]

[node name="Mysterious_Person" type="Area2D" parent="."]
position = Vector2(1269, 588)
scale = Vector2(5.15625, 4.53125)
script = ExtResource("5_iv88o")
dialogue_resource = ExtResource("6_cbxgm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mysterious_Person"]
position = Vector2(2.13333, -35.531)
shape = SubResource("RectangleShape2D_umgay")

[node name="Sprite2D" type="Sprite2D" parent="Mysterious_Person"]
position = Vector2(5.62424, -31.1172)
texture = ExtResource("7_ey4ky")

[node name="Barrier1" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier1"]
position = Vector2(712, 484)
shape = SubResource("RectangleShape2D_6eoxu")

[node name="Sprite2D" type="Sprite2D" parent="Barrier1"]
position = Vector2(596.5, 479.5)
scale = Vector2(47.6562, 5.3)
texture = ExtResource("4_7rxoq")

[node name="Barrier2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier2"]
position = Vector2(696, -4)
shape = SubResource("RectangleShape2D_6eoxu")

[node name="Sprite2D" type="Sprite2D" parent="Barrier2"]
position = Vector2(-160.5, 239.5)
scale = Vector2(8.1, 15.2812)
texture = ExtResource("5_bgpmq")

[node name="Barrier3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier3"]
position = Vector2(-165, 314)
shape = SubResource("RectangleShape2D_y0tv5")

[node name="Sprite2D" type="Sprite2D" parent="Barrier3"]
position = Vector2(594, -6)
scale = Vector2(47.6562, 5.3)
texture = ExtResource("4_7rxoq")

[node name="Barrier4" type="StaticBody2D" parent="."]
position = Vector2(19, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier4"]
position = Vector2(1344, 309)
shape = SubResource("RectangleShape2D_y0tv5")

[node name="Sprite2D" type="Sprite2D" parent="Barrier4"]
position = Vector2(1346, 246.5)
scale = Vector2(8.2, 15.2188)
texture = ExtResource("5_bgpmq")

[node name="Undreamer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 93.0
offset_top = 36.0
offset_right = 214.0
offset_bottom = 223.0
script = ExtResource("11_5yrdi")

[node name="UndreamerDevice" type="Sprite2D" parent="Undreamer"]
position = Vector2(535, 402)
scale = Vector2(1.29847, 1.36259)
texture = ExtResource("10_g5oks")

[node name="Undream" type="Button" parent="Undreamer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 487.0
offset_top = 42.0
offset_right = 687.0
offset_bottom = 128.0

[node name="Exit" type="Button" parent="Undreamer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 504.0
offset_top = 160.0
offset_right = 670.0
offset_bottom = 225.0

[connection signal="body_entered" from="Mysterious_Person" to="Mysterious_Person" method="_on_body_entered"]
[connection signal="body_exited" from="Mysterious_Person" to="Mysterious_Person" method="_on_body_exited"]
[connection signal="pressed" from="Undreamer/Undream" to="Undreamer" method="_on_undream_pressed"]
[connection signal="pressed" from="Undreamer/Exit" to="Undreamer" method="_on_exit_pressed"]
